Support multiple years
Year is extracted from the package name. The format should be `aoc.yearYYYY.dayDD` where YYYY is the four digit year, and DD is the two digit day. Puzzle input should be stored in a folder named after the year, e.g. `2025/day01.txt`.